--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="login_button_text">Validar</string>
 
     <!-- Principal Panel Activity -->
-    <string name="title_route_text">Datero - Ruta </string>
+    <string name="title_route_text">Datero - Ruta ABC-22</string>
 </resources>
